--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.17.1",
     "helmet": "^3.20.0",
     "knex": "^0.19.1",
+    "run": "^1.4.0",
+    "server": "^1.0.19",
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {
